sync develop in release

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -282,7 +282,7 @@ select{
 	} 
 }
 
-.btn-background-transparent{
+.btn-background-transparent, .btn-background-transparent-minor-size{
 	background: transparent;
 	min-width: 208px;
 	width: auto;
@@ -6242,7 +6242,6 @@ body.european-week{
 
 
 /* Styling Wysiwyg  */
-
 .float-img{
 	float: left;
 	margin-right: 1em;
@@ -6253,7 +6252,21 @@ body.european-week{
 	margin-right: 2em;
 }
 
+.btn-background-transparent-minor-size{
+	font-size: 1.3rem;
+}
 
+h1.h1-minor-font-size{
+	font-size: 1.8em !important;
+}
+
+h2.h2-minor-font-size{
+	font-size: 1.9em !important;
+}
+
+.paragraph-more-text{
+	max-width: 670px !important;
+}
 
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
 
@@ -9943,5 +9956,96 @@ body.page-node-253{
 				overflow-y: scroll;
 			}
 		}
+	}
+}
+
+/* View Home page banners detail views*/
+.node-type-frontpage-slider{
+	.main-container{
+		.col-md-6{
+			float: none;
+    		margin: 2em auto;
+			.field-name-body{
+				background: url(../images/background-splash-box1.png) #94c000 !important;
+				float: left;
+				text-align: center;
+				padding-bottom: 0;
+				width: 100%;
+				height: 380px;
+				h1{
+					padding-top: 1em;
+					border-bottom: 0;
+					font-size: 2em;
+					font-style: normal;
+					font-weight: 400;
+					color: #FFF;
+				}
+				h2{
+					color: #FFF;
+					font-style: normal;
+					font-weight: 600;
+				}
+				p{
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: center;
+					color: #FFF;
+					padding-top: 1em;
+					padding-bottom: 1.5em;
+					max-width: 575px;
+					margin: 0 auto;
+					font-size: 1.2em;
+					a{
+						border-bottom: inset;
+						color: #FFF;
+					}
+					a.btn-background-transparent:hover {
+					    background: #e5f1ac;
+					    color: #00309d;
+					    border: 3px solid #00309d;
+					    font-weight: 600;
+					    text-decoration: none;
+					}
+				}
+			}
+			.field-name-field-image{
+				display: flex;
+			    justify-content: center;
+			    align-items: center;
+				min-height: 340px;
+				padding-left: 0;
+			    padding-right: 0;
+			    text-align: center;
+			    background-image: -ms-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+			    background-image: -moz-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+			    background-image: -o-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+			    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(47, #f6f6f6), color-stop(100, #ededed));
+			    background-image: -webkit-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+			    background-image: linear-gradient(to bottom, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+			}
+		}
+	}
+}
+
+.page-news{
+	.view-news{
+		.view-content{
+	    	.views-row{
+	    		.field-name-field-image{
+	    			border: 2px solid #bcd75b;
+				    float: left;
+				    padding-right: 0;
+				    margin-right: 20px;
+				    margin-top: 13px;
+				    border-radius: 7px;
+				    height: 114px;
+				    width: 114px;
+				    img{
+				    	border: 0;
+				    	margin-top:0;
+				    }
+	    		}
+	    	}
+	    }
 	}
 }
