--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -210,7 +210,8 @@ select {
 .region-content .views-row .date-display-single {
   float: none;
 }
-.btn-background-transparent {
+.btn-background-transparent,
+.btn-background-transparent-minor-size {
   background: transparent;
   min-width: 208px;
   width: auto;
@@ -224,14 +225,16 @@ select {
   display: block;
   float: left;
 }
-.btn-background-transparent:hover {
+.btn-background-transparent:hover,
+.btn-background-transparent-minor-size:hover {
   background: #e5f1ac;
   color: #00309d;
   border: 3px solid #00309d;
   font-weight: 600;
   text-decoration: none;
 }
-.btn-background-transparent:after {
+.btn-background-transparent:after,
+.btn-background-transparent-minor-size:after {
   position: absolute;
   font-family: "Glyphicons Halflings";
   content: "\e258";
@@ -5620,6 +5623,18 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
   float: left;
   margin-right: 2em;
 }
+.btn-background-transparent-minor-size {
+  font-size: 1.3rem;
+}
+h1.h1-minor-font-size {
+  font-size: 1.8em !important;
+}
+h2.h2-minor-font-size {
+  font-size: 1.9em !important;
+}
+.paragraph-more-text {
+  max-width: 670px !important;
+}
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
 /* Private Zone */
 .pane-hwc-partner-hwc-partner-profile-title {
@@ -8616,6 +8631,83 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   height: 500px;
   overflow-y: scroll;
 }
+/* View Home page banners detail views*/
+.node-type-frontpage-slider .main-container .col-md-6 {
+  float: none;
+  margin: 2em auto;
+}
+.node-type-frontpage-slider .main-container .col-md-6 .field-name-body {
+  background: url(../images/background-splash-box1.png) #94c000 !important;
+  float: left;
+  text-align: center;
+  padding-bottom: 0;
+  width: 100%;
+  height: 380px;
+}
+.node-type-frontpage-slider .main-container .col-md-6 .field-name-body h1 {
+  padding-top: 1em;
+  border-bottom: 0;
+  font-size: 2em;
+  font-style: normal;
+  font-weight: 400;
+  color: #FFF;
+}
+.node-type-frontpage-slider .main-container .col-md-6 .field-name-body h2 {
+  color: #FFF;
+  font-style: normal;
+  font-weight: 600;
+}
+.node-type-frontpage-slider .main-container .col-md-6 .field-name-body p {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: #FFF;
+  padding-top: 1em;
+  padding-bottom: 1.5em;
+  max-width: 575px;
+  margin: 0 auto;
+  font-size: 1.2em;
+}
+.node-type-frontpage-slider .main-container .col-md-6 .field-name-body p a {
+  border-bottom: inset;
+  color: #FFF;
+}
+.node-type-frontpage-slider .main-container .col-md-6 .field-name-body p a.btn-background-transparent:hover {
+  background: #e5f1ac;
+  color: #00309d;
+  border: 3px solid #00309d;
+  font-weight: 600;
+  text-decoration: none;
+}
+.node-type-frontpage-slider .main-container .col-md-6 .field-name-field-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 340px;
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
+  background-image: -ms-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+  background-image: -moz-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+  background-image: -o-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(47, #f6f6f6), color-stop(100, #ededed));
+  background-image: -webkit-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+  background-image: linear-gradient(to bottom, #ededed 0%, #f6f6f6 47%, #ededed 100%);
+}
+.page-news .view-news .view-content .views-row .field-name-field-image {
+  border: 2px solid #bcd75b;
+  float: left;
+  padding-right: 0;
+  margin-right: 20px;
+  margin-top: 13px;
+  border-radius: 7px;
+  height: 114px;
+  width: 114px;
+}
+.page-news .view-news .view-content .views-row .field-name-field-image img {
+  border: 0;
+  margin-top: 0;
+}
 .isMobile {
   float: right !important;
 }
@@ -10896,6 +10988,10 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   }
   #block-hwc-partner-hwc-partner-private-zone-gpep .breadcrumb {
     display: block;
+  }
+  /* View Home page banners detail views*/
+  .node-type-frontpage-slider .main-container .col-md-6 .field-name-body {
+    height: auto;
   }
 }
 @media (max-width: 767px) {
