--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4440,29 +4440,12 @@ body{
 	}
 }
 
-body{
-	&.ocp{
-		.panels-flexible-row h2{
-		    font-weight: 600;
-		    padding-left: 0;
-		}
-		.panels-flexible-column-first{
-			.pane-node-field-mission-statement{
-				.pane-title{
-					font-weight: 600;
-				}
-			}
-			.pane-node-field-pledge{
-				.pane-title{
-					font-weight: 600;
-				}
-			}
-		}
-		.box-type-partner{
-			width: 100%;
-		}
+body.ocp{
+	.panels-flexible-row h2{
+	    font-weight: 600;
+	    padding-left: 0;
 	}
-
+		
 	.pane-node-field-mission-statement{
 		margin-left: 0 !important;
 	}
