--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -961,7 +961,7 @@
 	}
 
 	.panels-flexible-column-last {
-	    padding-left: 0 !important;
+	    padding-left: 10px !important;
 	}
 
 	.node-type-article article .field-name-body.field-type-text-with-summary .become-partner .coments .col-sm-12.col-md-12.col-xs-12{
