--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -628,6 +628,7 @@
 	/* Panels - National Focal Points, etc. */
 	.panels-flexible-column-inside-first .profile-col-left-middle-2{
 		width: 100%;
+		margin-left: 10px;
 	}
 
 	.main-container .panels-flexible-row h2{
