--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3521,7 +3521,8 @@ div.workbench-info-block{
 			}
 
 			img{
-				max-width: 150px;
+				width: 110px;
+				height: 110px;
 			}
 
 			span.logo-content{
@@ -4436,6 +4437,7 @@ body{
 		}
 		.box-type-partner{
 			width: 100%;
+			margin-left: 10px;
 		}
 	}
 }
@@ -4890,8 +4892,8 @@ html:lang(sv)
 		    .views-field-field-logo{
 		    	img {
 				    border: 0;
-				    width: 120px;
-				    height: auto;
+				    width: 110px;
+				    height: 110px;
 				    margin: 0 auto;
 				}
 		    } 
@@ -9692,7 +9694,8 @@ body.front-page{
 				    justify-content: center;
 				    .item {
 					    img{
-					    	width: 65%;
+					    	width: 110px;
+					    	height: 110px;
 					    	margin: 0 auto;
 					    }
 					    .views-field{
