--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3521,8 +3521,7 @@ div.workbench-info-block{
 			}
 
 			img{
-				width: 110px;
-				height: 110px;
+				max-width: 110px;
 			}
 
 			span.logo-content{
@@ -3550,8 +3549,7 @@ div.workbench-info-block{
 }
 
 .view-display-id-fop img, .view-display-id-een img, .view-display-id-block_1 img {
-    width: 110px;
-    height:	110px;
+    max-width: 110px;
     border: 0;
 }
 
@@ -4280,7 +4278,7 @@ body.fop{
 			padding-top: 0.3rem;
 		}
 		.pane-node-field-mission-statement{
-			margin: 2rem 0 2rem 10px;
+			margin: 2rem 0 2rem 0;
 		}
 	}
 	.panels-flexible-column-last{
