MHWC-485 - public profile of partners - display of the address

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9421,6 +9421,10 @@ aside.col-md-3{
 	clear: both;
 }
 
+.clear-both-conf-fix{
+	clear: both;
+}
+
 .accordion-menu{
 	float: left;
 	margin-top: 47px;
