MHWC-485 - public profile of partners - display of the address

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4380,6 +4380,7 @@ body.een{
 		.pane-node-field-website{
 			.field-type-link-field{
 				padding: 0;
+				clear: both;
 				a{
 				    font-style: normal;
 				    width: auto;
