MHWC-512 - Infographic page design looks disturbed

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8714,7 +8714,8 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   background-image: -webkit-linear-gradient(top, #ededed 0%, #f6f6f6 47%, #ededed 100%);
   background-image: linear-gradient(to bottom, #ededed 0%, #f6f6f6 47%, #ededed 100%);
 }
-.page-news .view-news .view-content .views-row .field-name-field-image {
+.page-news .view-news .view-content .views-row .field-name-field-image,
+.page-media-centre-press-room .view-news .view-content .views-row .field-name-field-image {
   border: 2px solid #bcd75b;
   float: left;
   padding-right: 0;
@@ -8724,7 +8725,8 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   height: 114px;
   width: 114px;
 }
-.page-news .view-news .view-content .views-row .field-name-field-image img {
+.page-news .view-news .view-content .views-row .field-name-field-image img,
+.page-media-centre-press-room .view-news .view-content .views-row .field-name-field-image img {
   border: 0;
   margin-top: 0;
 }
