--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -911,6 +911,7 @@ ul.tabs--primary.nav.nav-tabs{
 				width: inherit;
 				height: inherit;
 				border: none;
+				max-width: inherit;
 			}
 		}
 		.group-right{
@@ -933,6 +934,7 @@ ul.tabs--primary.nav.nav-tabs{
 			h2{
 				text-align: left;
 				margin-top: 0px;
+				font-size: 2.1rem;
 			}
 		}
 		.label_multilang_file{
