--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -10061,7 +10061,7 @@ body.page-node-253{
 	}
 }
 
-.page-news{
+.page-news, .page-media-centre-press-room{
 	.view-news{
 		.view-content{
 	    	.views-row{
