--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -8778,6 +8778,7 @@ table tr.error.form-type-select:after {
   width: inherit;
   height: inherit;
   border: none;
+  max-width: inherit;
 }
 .node-infographic .group-right .field-type-file,
 .node-infographic .group-right .field-type-image {
@@ -8795,6 +8796,7 @@ table tr.error.form-type-select:after {
 .node-infographic .field-name-title-field h2 {
   text-align: left;
   margin-top: 0px;
+  font-size: 2.1rem;
 }
 .node-infographic .label_multilang_file {
   padding-right: 3px;
