--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -475,6 +475,21 @@
 	    cursor: inherit;
 	}
 
+	.node-infographic{
+		.group-left{ 
+			.col-sm-4{
+				max-width: 175px;
+			}
+
+			img{
+				max-width: 175px;
+			}
+		}
+		.group-left.col-sm-4{
+			max-width: 195px;
+		}
+	}
+
 }
 
 @media (min-width: 1480px) {
