--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -1746,8 +1746,8 @@ header.navbar-default{
 /*infographics*/
 .view-infographic{
 	.views-row {
-		padding-right: @margin-movil;
-		padding-left: @margin-movil;
+		padding-right: 0;
+		padding-left: 0;
 		.field-type-image{
 			display: none;
 		}
