--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8730,6 +8730,9 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   border: 0;
   margin-top: 0;
 }
+#block-views-infographic-block-1 {
+  padding-bottom: 1em;
+}
 .isMobile {
   float: right !important;
 }
