HWC-497 - Order a printed copy wrong position

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -10,7 +10,7 @@
 				}
 			}
 		}
-}
+	}
 
 	body.front-page{
 		.main-container{
@@ -523,6 +523,9 @@
 
 	.publication-detail{
 		.publications-left-column{
+			float: left;
+		    margin-right: 0em;
+		    width: auto;
 			img{
 				display: none;
 			}
