--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -490,6 +490,20 @@
 		}
 	}
 
+	.node-type-publication{ 
+		.field-name-field-file{
+			width: 100%;
+			ul{
+				li{
+					.form-group {
+					    float: left;
+					    width: 80%;
+					}				
+				}
+			}
+		}
+	}
+
 }
 
 @media (min-width: 1480px) {
