--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2512,12 +2512,14 @@ div.publications-detail-right-column > a.download{
 			padding-top: 1px;
 			padding-left: 0;
 			li{
-				float: left;
 				.form-group{
 					float: left;
+					width: 86%;
 				}
 				> .form-group:nth-child(1){
 					padding-right: 5px;
+					width: auto;
+					float: left;
 				}
 				.slash{
 					float: left;
@@ -2892,6 +2894,7 @@ html:lang(pl){
 		border-bottom:0;
 		margin-top: 2em;
     	padding: 0 2em 0 0;
+    	display: flex;
 		.download{
 			margin-top: 2em;
 			float: left;
