--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6924,7 +6924,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		.views-field-title-field, .views-field-name-field{
 			display: none;
 			text-align: center;
-			margin-top: 1em;
+			margin-top: 0;
 		}
 		.hwc-alpha-pager-view-title-field{
 			display: block;
