--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3544,7 +3544,7 @@ div.workbench-info-block{
 			span.title-box-content{
 				display: flex;
 				justify-content: center;
-				padding: 10px 5px 0 5px;
+				padding: 0 5px 0 5px;
 			}
 		}
 	}	
