--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -3220,12 +3220,20 @@ div.workbench-info-block {
   border: 2px solid #bcd75b;
   border-radius: 7px;
 }
+.field-name-field-general-phone {
+  padding-top: 10px;
+}
+.field-name-field-website a {
+  font-weight: bold !important;
+  font-size: 1.2em;
+}
 .panels-flexible-column-inside-first {
   /* panels-flexible-column-inside-first Header panel*/
   /*panels-flexible-column-inside-first Footer panel*/
 }
 .panels-flexible-column-inside-first .panels-flexible-region-first {
   float: left;
+  width: auto;
   padding-right: 1em;
 }
 .panels-flexible-column-inside-first > div:nth-child(1) {
@@ -3244,8 +3252,17 @@ div.workbench-info-block {
   float: left;
   width: 60%;
 }
+.panels-flexible-column-inside-first .profile-col-left-middle-2 .field-name-field-country .field-item {
+  padding-top: 25px;
+}
+.ocp .panels-flexible-column-inside-first .panels-flexible-region-first {
+  float: none;
+  width: 100%;
+  padding-right: 1em;
+}
 .panels-flexible-region .pane-node-field-main-contact {
   clear: both;
+  padding-top: 1em;
 }
 .panels-flexible-region .field-name-field-abbreviation-name,
 .panels-flexible-region .field-name-field-orgtype,
@@ -3355,10 +3372,6 @@ div.workbench-info-block {
 .panels-flexible-column-last .pane-node-field-country {
   padding-top: 1em;
 }
-.panels-flexible-column-last .field-name-field-website {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
 .panels-flexible-column-last .field-type-link-field a {
   white-space: nowrap;
   width: 280px;
@@ -3368,7 +3381,6 @@ div.workbench-info-block {
 .node-type-partner [class*="field-type-link"] {
   font-weight: bold;
   text-align: left;
-  margin: 0.1rem 0 !important;
 }
 .node-type-partner [class*="field-type-link"][class*="facebook"] {
   background: url("../images/header/header-ico-facebook.png") no-repeat left center;
@@ -3622,10 +3634,6 @@ body.mp .panels-flexible-column-last .pane-node-field-country {
   padding: 1rem 0;
   display: flex;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field,
-body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-field {
-  padding: 1em 0 1rem 0;
-}
 body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a,
 body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
   font-style: normal;
@@ -3641,10 +3649,6 @@ body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-f
   content: "";
   left: 0.5rem;
   position: relative;
-}
-body.ocp .panels-flexible-column-last .field-type-link-field,
-body.mp .panels-flexible-column-last .field-type-link-field {
-  margin-bottom: 0.5rem;
 }
 body.ocp .panels-flexible-column-last .pane-node-title-field,
 body.mp .panels-flexible-column-last .pane-node-title-field,
@@ -3754,7 +3758,7 @@ body.fop .panels-flexible-column-first .pane-node-field-bussines-sector {
   padding-top: 0.3rem;
 }
 body.fop .panels-flexible-column-first .pane-node-field-mission-statement {
-  margin: 2rem 0 0 0;
+  margin: 1.5rem 0 0 0;
 }
 body.fop .panels-flexible-column-last .pane-node-field-country {
   padding: 1rem 0 0;
@@ -3763,9 +3767,6 @@ body.fop .panels-flexible-column-last .pane-node-field-country {
 body.fop .panels-flexible-column-last .pane-node-field-country .field-item {
   font-size: 2rem;
   font-weight: 600;
-}
-body.fop .panels-flexible-column-last .pane-node-field-website .field-type-link-field {
-  padding: 0 0 1rem 0;
 }
 body.fop .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
   font-style: normal;
@@ -3780,6 +3781,9 @@ body.fop .panels-flexible-column-last .pane-node-field-website .field-type-link-
   content: "";
   left: 0.5rem;
   position: relative;
+}
+body.een .panels-flexible-row h2 {
+  padding-bottom: 20px;
 }
 body.een .panels-flexible-column-first .field-name-field-country img {
   border: 0;
@@ -3823,7 +3827,7 @@ body.een .panels-flexible-column-first .pane-node-field-bussines-sector {
   padding-top: 0.8rem;
 }
 body.een .panels-flexible-column-first .pane-node-field-mission-statement {
-  margin: 5rem 0 0 0;
+  margin-top: 5px;
 }
 body.een .panels-flexible-column-last .pane-node-field-country {
   padding: 1rem 0 0;
@@ -3837,7 +3841,6 @@ body.een .panels-flexible-column-last .pane-node-field-general-phone {
   padding: 0;
 }
 body.een .panels-flexible-column-last .pane-node-field-website .field-type-link-field {
-  padding: 0;
   clear: both;
 }
 body.een .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
@@ -3867,6 +3870,10 @@ body.een .panels-flexible-region-partner_detail-left_right-inside .pane-node-fie
 body.een .panels-flexible-row-partner_detail-13 {
   float: right;
   width: 100%;
+}
+.mp-country .field-item {
+  width: 200px;
+  padding-top: 12px;
 }
 body.mp .panels-flexible-row h2,
 body.fop .panels-flexible-row h2,
@@ -7851,7 +7858,6 @@ body.mp .panels-flexible-column-first .pane-node-field-country {
 }
 body.mp .panels-flexible-column-first .pane-node-field-country.profile-inline-field {
   float: left;
-  min-height: 11rem;
   padding-right: 1em;
 }
 body.mp .panels-flexible-column-first .pane-node-field-country.profile-inline-field .field-name-field-country img {
@@ -7893,7 +7899,7 @@ body.mp .panels-flexible-column-first .pane-node-field-mission-statement,
 body.mp .panels-flexible-column-first .pane-node-field-pledge {
   background: transparent;
   background-size: initial;
-  margin-top: 1em;
+  margin-top: 5px;
   border-radius: 15px;
   margin-bottom: 1em;
 }
@@ -7916,6 +7922,9 @@ body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
 }
 body.mp .panels-flexible-column-first .pane-node-field-mission-statement {
   margin: 2rem 0 2rem 10px;
+}
+.pane-node-field-logo {
+  height: 220px!important;
 }
 /* MHWC-39 - For UX next step */
 aside.col-md-3 .region.region-sidebar-first.well {
