--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3716,12 +3716,25 @@ div.workbench-info-block{
 			border: 2px solid #bcd75b;
 			border-radius: 7px;
     	}
+
+	}
+}
+
+.field-name-field-general-phone{
+	padding-top: 10px;
+}
+
+.field-name-field-website{
+	a{
+		font-weight: bold !important;
+		font-size: 1.2em;
 	}
 }
 
 .panels-flexible-column-inside-first{
 	.panels-flexible-region-first{
 		float:left;
+		width: auto;
 		padding-right: 1em;
 	}
 
@@ -3744,6 +3757,21 @@ div.workbench-info-block{
 	.profile-col-left-middle-2{
 		float:left;
 		width: 60%;
+		.field-name-field-country{
+			.field-item{
+				padding-top: 25px;
+			}
+		}
+	}
+}
+
+.ocp{
+	.panels-flexible-column-inside-first{
+		.panels-flexible-region-first{
+			float:none;
+			width: 100%;
+			padding-right: 1em;
+		}
 	}
 }
 
@@ -3751,6 +3779,7 @@ div.workbench-info-block{
 
 	.pane-node-field-main-contact{
 		clear: both;
+		padding-top: 1em;
 	}
 
 	.field-name-field-abbreviation-name, .field-name-field-orgtype, .pane-node-field-bussines-sector{
@@ -3875,11 +3904,6 @@ div.workbench-info-block{
 		padding-top: 1em;
 	}
 
-	.field-name-field-website{
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-
 	.field-type-link-field a{
 		white-space: nowrap; 
 		width: 280px; 
@@ -3892,7 +3916,6 @@ div.workbench-info-block{
 	[class*="field-type-link"]{
 		font-weight: bold;
 		text-align: left;
-		margin: 0.1rem 0 !important;
 		&[class*="facebook"]{
 			background: url("../images/header/header-ico-facebook.png") no-repeat left center;
 			padding-left: 30px;
@@ -4167,7 +4190,6 @@ body.ocp, body.mp{
 		}
 		.pane-node-field-website{
 			.field-type-link-field{
-				padding: 1em 0 1rem 0;
 				a{
 				    font-style: normal;
 				    width: auto;
@@ -4183,9 +4205,6 @@ body.ocp, body.mp{
 				    }
 				}
 			}
-		}
-		.field-type-link-field {
-			margin-bottom: 0.5rem;
 		}
 		.pane-node-title-field, .pane-node-title{
 			margin-top: 1.8rem;
@@ -4291,7 +4310,7 @@ body.fop{
 			padding-top: 0.3rem;
 		}
 		.pane-node-field-mission-statement{
-			margin: 2rem 0 0 0;
+			margin: 1.5rem 0 0 0;
 		}
 	}
 	.panels-flexible-column-last{
@@ -4305,7 +4324,6 @@ body.fop{
 		}
 		.pane-node-field-website{
 			.field-type-link-field{
-				padding: 0 0 1rem 0;
 				a{
 				    font-style: normal;
 				    width: auto;
@@ -4327,6 +4345,13 @@ body.fop{
 }
 
 body.een{
+
+	.panels-flexible-row{
+		h2{
+			padding-bottom: 20px;
+		}
+	}
+
 	.panels-flexible-column-first{
 		.field-name-field-country{
 			img{
@@ -4375,7 +4400,7 @@ body.een{
 			padding-top: 0.8rem;
 		}
 		.pane-node-field-mission-statement{
-			margin: 5rem 0 0 0;
+			margin-top: 5px;
 		}
 	}
 	.panels-flexible-column-last{
@@ -4392,7 +4417,6 @@ body.een{
 		}
 		.pane-node-field-website{
 			.field-type-link-field{
-				padding: 0;
 				clear: both;
 				a{
 				    font-style: normal;
@@ -4426,6 +4450,13 @@ body.een{
 	.panels-flexible-row-partner_detail-13{
 		float: right;
 		width: 100%;
+	}
+}
+
+.mp-country{
+	.field-item{
+		width: 200px;
+		padding-top: 12px;
 	}
 }
 
@@ -9020,7 +9051,6 @@ body.mp{
 			float: left;
 			&.profile-inline-field{
 				float: left;
-				min-height: 11rem;
 				padding-right: 1em;
 				.field-name-field-country{					
 					img{
@@ -9066,7 +9096,7 @@ body.mp{
 		.pane-node-field-pledge{
 			background: transparent;
 			background-size: initial;
-			margin-top: 1em;
+			margin-top: 5px;
 			border-radius: 15px;
 			margin-bottom: 1em;
 			.pane-title{
@@ -9090,6 +9120,10 @@ body.mp{
 			margin: 2rem 0 2rem 10px;
 		}
 	}
+}
+
+.pane-node-field-logo{
+	height: 220px!important;
 }
 
 /* MHWC-39 - For UX next step */
